# macaw

./: .dir-locals.el  .gitignore  CHANGELOG.md  README.md  build.clj  deps.edn
.clj-kondo/: config.edn
.clj-kondo/hooks/clojure/: test.clj
.github/: CODEOWNERS
.github/workflows/: deploy.yml  tests.yml
java/com/metabase/: SqlVisitor.java
python/: README.md  pyproject.toml
python/pymacaw/: __init__.py  ast.py  components.py  core.py  rewrite.py  types.py  util.py
python/tests/: __init__.py  test_ast.py  test_components.py  test_rewrite.py
src/guacamaya/: core.clj
src/macaw/: ast.clj  ast_types.clj  clj.clj  collect.clj  config.clj  core.clj  rewrite.clj  scope_experiments.clj  table_walk.clj  types.clj  util.clj  walk.clj
src/macaw/util/: malli.clj
test/guacamaya/: core_test.clj
test/macaw/: acceptance_test.clj  acceptance_tests.clj  ast_test.clj  clj_test.clj  core_test.clj  scope_experiments.clj  scope_experiments_test.clj  test_utils.clj  util_test.clj
test/macaw/test/: util.clj  util_test.clj
test/macaw/util/: malli_test.clj
test/resources/: compound__correlated_subquery.analysis.edn  compound__correlated_subquery.sql  compound__cte.sql  compound__subselect.sql  compound__union.analysis.edn  compound__union.sql  cycle__cte.analysis.edn  cycle__cte.sql  duplicate_scopes.renames.edn  no_source_columns.analysis.edn  no_source_columns.rewritten.sql  shadow__subselect.analysis.edn  shadow__subselect.sql  snowflake.sql  snowflakelet.sql
test/resources/acceptance/: between__broken_49.analysis.edn  between__working.analysis.edn  (+67 more)
(+11 files in other folders)
