[project]
name = "pymacaw"
version = "0.1.0"
description = "Python port of Macaw SQL analysis library using SQLGlot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "EPL-2.0"}
authors = [
    {name = "Metabase"}
]
dependencies = [
    "sqlglot>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["pymacaw"]
